// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification should show success notification 1`] = `
<div>
  <div
    class="alertContainer"
  >
    <div>
      <div
        class="bx--inline-notification bx--inline-notification--low-contrast bx--inline-notification--success bx--inline-notification--hide-close-button"
        kind="success"
        role="alert"
      >
        <div
          class="bx--inline-notification__details"
        >
          <svg
            aria-hidden="true"
            class="bx--inline-notification__icon"
            fill="currentColor"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10,1c-4.9,0-9,4.1-9,9s4.1,9,9,9s9-4,9-9S15,1,10,1z M8.7,13.5l-3.2-3.2l1-1l2.2,2.2l4.8-4.8l1,1L8.7,13.5z"
            />
            <path
              d="M8.7,13.5l-3.2-3.2l1-1l2.2,2.2l4.8-4.8l1,1L8.7,13.5z"
              data-icon-path="inner-path"
              fill="none"
              opacity="0"
            />
            <title>
              success icon
            </title>
          </svg>
          <div
            class="bx--inline-notification__text-wrapper"
          >
            <p
              class="bx--inline-notification__title"
            >
              <div />
            </p>
            <div
              class="bx--inline-notification__subtitle"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification should show warning notification 1`] = `
<div>
  <div
    class="alertContainer"
  >
    <div>
      <div
        class="bx--inline-notification bx--inline-notification--low-contrast bx--inline-notification--warning bx--inline-notification--hide-close-button"
        kind="warning"
        role="alert"
      >
        <div
          class="bx--inline-notification__details"
        >
          <svg
            aria-hidden="true"
            class="bx--inline-notification__icon"
            fill="currentColor"
            focusable="false"
            height="20"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10,1c-5,0-9,4-9,9s4,9,9,9s9-4,9-9S15,1,10,1z M9.2,5h1.5v7H9.2V5z M10,16c-0.6,0-1-0.4-1-1s0.4-1,1-1	s1,0.4,1,1S10.6,16,10,16z"
            />
            <path
              d="M9.2,5h1.5v7H9.2V5z M10,16c-0.6,0-1-0.4-1-1s0.4-1,1-1s1,0.4,1,1S10.6,16,10,16z"
              data-icon-path="inner-path"
              opacity="0"
            />
            <title>
              warning icon
            </title>
          </svg>
          <div
            class="bx--inline-notification__text-wrapper"
          >
            <p
              class="bx--inline-notification__title"
            >
              <div />
            </p>
            <div
              class="bx--inline-notification__subtitle"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
